--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,5 @@ dependencies {
     compile 'com.android.support:support-v4:23.1.1'
     compile 'com.github.PhilJay:MPAndroidChart:v2.1.6'
     compile 'com.prolificinteractive:material-calendarview:1.1.0'
+    compile 'com.github.clans:fab:1.6.2'
 }
