Creado el juego de respiracion y ligado al registro de categorias

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -93,9 +93,12 @@
                 android:value="com.bluecoreservices.anxietymonitor2.MainActivity" />
         </activity>
         <activity android:name=".breathingGame"
-            android:label="BreathinGame"
+            android:label="Breathing Game"
             android:parentActivityName=".MainActivity"
             android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.bluecoreservices.anxietymonitor2.MainActivity" />
         </activity>
     </application>
 
