Corregido algunos bugs del menu y de el instrumento dasa

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "23.0.1"
 
     defaultConfig {
-        applicationId "com.bluecoreservices.anxietymonitor2"
+        applicationId "com.bluecoreservices.anxietymonitor"
         minSdkVersion 19
         targetSdkVersion 23
         versionCode 1
@@ -13,7 +13,7 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
