--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,5 @@ dependencies {
     compile 'com.github.PhilJay:MPAndroidChart:v2.1.6'
     compile 'com.prolificinteractive:material-calendarview:1.1.0'
     compile 'com.github.clans:fab:1.6.2'
+    compile 'com.github.lzyzsd:circleprogress:1.1.0@aar'
 }
