--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.bluecoreservices.anxietymonitor"
     android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionName="1.0">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -14,10 +14,10 @@
         android:icon="@mipmap/am_launcher"
         android:label="@string/app_name"
         android:supportsRtl="false"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <service android:name="service.dasa_notifications" />
 
-        <receiver android:name="service.AutoStart" >
+        <receiver android:name="service.AutoStart">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
@@ -26,7 +26,7 @@
         <activity
             android:name=".listadoTerapeutas"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar" >
+            android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.bluecoreservices.anxietymonitor.login_principal" />
@@ -35,7 +35,7 @@
             android:name=".ListadoPacientes"
             android:label="@string/app_name"
             android:parentActivityName=".login_principal"
-            android:theme="@style/AppTheme.NoActionBar" >
+            android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.bluecoreservices.anxietymonitor.login_principal" />
@@ -44,7 +44,7 @@
             android:name=".MainActivity"
             android:icon="@drawable/am_alert_logo"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar" >
+            android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.bluecoreservices.anxietymonitor.login_principal" />
@@ -53,7 +53,7 @@
             android:name=".add_therapist"
             android:label="@string/add_therapist_sub_title"
             android:parentActivityName=".listadoTerapeutas"
-            android:theme="@style/AppTheme.NoActionBar" >
+            android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.bluecoreservices.anxietymonitor.listadoTerapeutas" />
@@ -62,7 +62,7 @@
             android:name=".add_patient"
             android:label="@string/add_patient_sub_title"
             android:parentActivityName=".ListadoPacientes"
-            android:theme="@style/AppTheme.NoActionBar" >
+            android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.bluecoreservices.anxietymonitor.ListadoPacientes" />
@@ -71,17 +71,16 @@
             android:name=".add_dasa"
             android:label="@string/add_dasa_sub_title"
             android:parentActivityName=".MainActivity"
-            android:theme="@style/AppTheme.NoActionBar" >
+            android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.bluecoreservices.anxietymonitor.MainActivity" />
         </activity>
         <activity
             android:name=".login_principal"
-            android:label="@string/app_name" >
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -89,7 +88,7 @@
             android:name=".add_catego"
             android:label="@string/title_activity_add_catego"
             android:parentActivityName=".MainActivity"
-            android:theme="@style/AppTheme.NoActionBar" >
+            android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.bluecoreservices.anxietymonitor.MainActivity" />
@@ -98,7 +97,25 @@
             android:name=".breathingGame"
             android:label="Breathing Game"
             android:parentActivityName=".MainActivity"
-            android:theme="@style/AppTheme.NoActionBar" >
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.bluecoreservices.anxietymonitor.MainActivity" />
+        </activity>
+        <activity
+            android:name=".final_instrument_patient"
+            android:label="@string/title_activity_final_instrument_patient"
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.bluecoreservices.anxietymonitor.MainActivity" />
+        </activity>
+        <activity
+            android:name=".final_instrument_therapist"
+            android:label="@string/title_activity_final_instrument_patient"
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.bluecoreservices.anxietymonitor.MainActivity" />
