--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
         android:supportsRtl="false"
         android:theme="@style/AppTheme">
         <service android:name="service.dasa_notifications" />
+        <service android:name="service.final_notifications" />
 
         <receiver android:name="service.AutoStart">
             <intent-filter>
@@ -26,7 +27,10 @@
         <activity
             android:name=".login_principal"
             android:label="@string/app_name">
-
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity
             android:name=".listadoTerapeutas"
@@ -116,10 +120,6 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.bluecoreservices.anxietymonitor.MainActivity" />
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
     </application>
 
