--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "com.bluecoreservices.anxietymonitor"
         minSdkVersion 19
         targetSdkVersion 23
-        versionCode 1
-        versionName "1.0"
+        versionCode 12
+        versionName "1.2"
     }
     buildTypes {
         release {
@@ -35,4 +35,5 @@ dependencies {
     compile 'com.prolificinteractive:material-calendarview:1.1.0'
     compile 'com.github.clans:fab:1.6.2'
     compile 'com.github.lzyzsd:circleprogress:1.1.0@aar'
+    compile 'com.github.deano2390:MaterialShowcaseView:1.0.5'
 }
